# whatsapp_riddle

./: Ascii.py  README.md  asked_riddles.json  main.py  openai_tool.py  pyproject.toml  twilio_tool.py  whatsapp_riddle_executers.py
tests/: test_app.py  test_openai_tool.py  test_twilio_tool.py
