[project]
name = "whatsapp-riddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.69.0",
    "pydantic>=2.11.1",
    "pytest>=8.3.5",
    "twilio>=9.5.1",
]
[tool.pytest.ini_options]
pythonpath = "."
